docs/api/qiskit/0.40/qiskit.transpiler.passes.UnrollCustomDefinitions.mdx
---
title: UnrollCustomDefinitions (v0.40)
description: API reference for qiskit.transpiler.passes.UnrollCustomDefinitions in qiskit v0.40
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.UnrollCustomDefinitions
---

# UnrollCustomDefinitions

<Class id="qiskit.transpiler.passes.UnrollCustomDefinitions" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/transpiler/passes/basis/unroll_custom_definitions.py" signature="UnrollCustomDefinitions(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Unrolls instructions with custom definitions.

  Unrolls instructions with custom definitions.

  **Parameters**

  *   **equivalence\_library** ([*EquivalenceLibrary*](qiskit.circuit.EquivalenceLibrary "qiskit.circuit.EquivalenceLibrary")) – The equivalence library which will be used by the BasisTranslator pass. (Instructions in this library will not be unrolled by this pass.)
  *   **basis\_gates** (*Optional\[list\[str]]*) – Target basis names to unroll to, e.g. \[‘u3’, ‘cx’]. Ignored if `target` is also specified.
  *   **target** (*Optional\[*[*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")*]*) – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") object corresponding to the compilation target. When specified, any argument specified for `basis_gates` is ignored.

  ## Methods

  <span id="qiskit-transpiler-passes-unrollcustomdefinitions-name" />

  ### name

  <Function id="qiskit.transpiler.passes.UnrollCustomDefinitions.name" signature="UnrollCustomDefinitions.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-unrollcustomdefinitions-run" />

  ### run

  <Function id="qiskit.transpiler.passes.UnrollCustomDefinitions.run" signature="UnrollCustomDefinitions.run(dag)">
    Run the UnrollCustomDefinitions pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – input dag

    **Raises**

    *   **QiskitError** – if unable to unroll given the basis due to undefined
    *   **decomposition rules**\*\* (****such as a bad basis****) or \*\***excessive recursion.** –

    **Returns**

    output unrolled dag

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.UnrollCustomDefinitions.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.UnrollCustomDefinitions.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

